[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[project]
name = "misc"
dynamic = ["version"]
description = "Linear Time Encryption by multiplication and cypher shift"
readme = "README.md"
requires-python = ">=3.8"

[tool.hatch.version]
path = "src/misc/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/misc"]